--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,9 +7,10 @@
 
 - link:
     ~/.dotfiles: ''
+    ~/.eslintrc: eslint/eslintrc
     ~/.gitconfig: git/gitconfig
     ~/.gitignore_global: git/gitignore_global
-    ~/.spacemacs: spacemacs/spacemacs 
+    ~/.spacemacs: spacemacs/spacemacs
     ~/.zshrc: zsh/zshrc
     ~/.zshenv: zsh/zshenv
     ~/.zprofile: zsh/zprofile
@@ -19,4 +20,3 @@
 
 - shell:
   - [git submodule update --init --recursive, Install submodules]
-    
