--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 
 - link:
     ~/.dotfiles: ''
+    ~/.tool-versions: asdf/tool-versions
     ~/.eslintrc: eslint/eslintrc
     ~/.gitconfig: git/gitconfig
     ~/.gitignore_global: git/gitignore_global
